# tango-idl-source

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  check-tag-version.sh  pom.xml
cmake/: tangoidl.pc.cmake  tangoidlConfig.cmake.in
include/: tango.idl
